--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,7 @@
   ],
   "hints": {
     "no-inline-styles": "off",
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "axe/text-alternatives": "off"
   }
 }
