--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
