--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "export-to-csv": "^1.4.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
